src/styles.css
@import url("https://fonts.googleapis.com/css?family=Imprima");
body {
    margin: 0;
    font-family: Imprima;
}

* {
    box-sizing: border-box;
}

:root {
    --primary-color: #6666aa;
    --dark-primary-color: #3b3b7a;
    --success-color: green;
    --danger-color: #ea4335;
    --dark-danger-color: #e22121;
    --light-color: #efefef;
}


/* Navbar common styles */

.nav ul {
    margin: 0;
    list-style-type: none;
}

.nav ul li {
    float: left;
    margin: 0 10px 0 10px;
}


/* Text */

.text-success {
    color: var(--success-color);
}

.text-center {
    text-align: center;
}


/* Utility */

label {
    font-size: 17px;
    display: block;
    margin-top: 10px;
}

.left-align {
    float: left;
}

.right-align {
    float: right !important;
}

.center {
    margin: auto;
}

a {
    text-decoration: none;
    color: black;
}

.avatar {
    background-color: white;
    border: 1px solid rgba(177, 177, 177, 0.7);
    padding: 7px 10px 7px 10px;
    border-radius: 100%;
    line-height: 1.5em;
    width: 40px;
    text-align: center;
    display: inline-block;
}

.border-radius {
    border-radius: 5px;
}


/* input */

input {
    font-size: 20px;
    padding: 10px;
    border-radius: 3px;
    border: hidden;
    width: 90%;
    margin: 2px;
}

input:focus {
    outline: none;
    border-bottom: solid 3px var(--primary-color);
}


/* button */

button {
    outline: none;
    border: none;
    padding: 5px;
    box-shadow: 4px 3px 5px 0px rgb(177 177 177);
    cursor: pointer;
}

.btn:hover {
    transform: scale(1.1);
}

.btn-success {
    color: white;
    background-color: var(--success-color);
}

.btn-danger {
    color: white !important;
    background-color: var(--danger-color) !important;
}

.btn-primary {
    color: white !important;
    background-color: var(--primary-color) !important;
}

.btn-primary:hover {
    background-color: var(--dark-primary-color) !important;
}

.btn-danger:hover {
    background-color: var(--dark-danger-color) !important;
}

button[type="submit"] {
    margin-top: 10px;
}


/* Main Content */

.main-content {
    padding-left: 70px;
    padding-top: 20px;
}

.main-window {
    margin-left: 50px;
}


/* Main Nav */

.main-nav {
    /* background-color: rgba(177, 177, 177, 0.1); */
    background-color: #ecae27;
    width: 90%;
    margin: auto;
    border-bottom-left-radius: 40px;
    border-bottom-right-radius: 40px;
    box-shadow: 3px 6px 7px 0px rgb(177 177 177);
    font-size: 20px;
    margin-bottom: 50px;
}

.tab-heading {
    background-color: var(--primary-color);
    display: inline-block;
    color: white;
    padding: 10px 30px 10px 30px;
    font-size: 18px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.tab {
    border: 1px solid rgba(177, 177, 177, 1.8);
    padding: 10px;
    border-radius: 3px;
    margin-bottom: 50px;
}

.main-nav h1 {
    margin: 0;
}

.main-nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.main-nav li {
    padding: 10px;
}


/* Sub Nav */

.sub-nav {
    box-shadow: -8px 6px 20px 4px rgb(177 177 177);
    margin-left: 45px;
}

.sub-nav ul {
    background-color: rgb(224, 215, 215);
    margin: 0;
}

.sub-nav ul li a {
    font-size: 20px;
    line-height: 3.0em;
}

.sub-nav li.active a {
    border-bottom: solid 5px var(--primary-color);
}

.sub-nav li a:hover {
    border-bottom: solid 5px var(--primary-color);
    opacity: 70%;
}


/* Side Nav */

.side-nav {
    width: 50px;
    background-color: var(--primary-color);
    height: 100%;
    top: 0;
    position: fixed;
    display: flex;
    justify-content:space-between;
    flex-direction: column;
    font-size: 30px;
    align-items: center;
    box-shadow: 0px 20px 20px 0px rgb(177 177 177);
}

.side-nav .mid{
    display: flex;
    flex-direction: column;
}

.side-nav a {
    margin-bottom: 20px;
    color: rgb(0, 0, 0);
    padding: 10px;
}

.side-nav .bottom{
    margin-bottom: 20px;
}

.side-nav a:hover {
    color: black;
}

.side-nav a.active {
    color: white;
    border-left: 4px solid white;
}


/* Calls History contact card */

#contactsList {
    margin: 5px;
}

.contact-card {
    padding: 10px;
    box-shadow: 1px 0px 5px 0px rgb(177 177 177);
    width: 100%;
    margin-bottom: 5px;
    border-radius: 7px;
}

.contact-card .upper {
    font-size: 18px;
    align-items: center;
    white-space: nowrap;
    width: 100%;
    display: flex;
}

.contact-card .name {
    width: 90%;
    margin-left: 3px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.contact-card .lower button {
    padding: 6px 12px;
    font-size: 16px;
    margin-right: 5px;
    border-radius: 5px;
}

.contact-card .lower {
    padding-left: 40px;
    display: flex;
    justify-content: space-between;
}

.contact-card .lower>* {
    margin-left: 5px;
}

.contact-card .time {
    font-size: 14px;
    color: var(--success-color);
}

.history {
    width: 80%;
    margin: auto;
}

.filters {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 20px;
}

.filters button {
    font-size: 16px;
}

.history input {
    font-size: medium;
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    border-radius: 5px;
    width: 100%;
    box-shadow: 4px 3px 5px 0px rgb(177 177 177);
    margin: 0 2px 20px 0;
}

.history input::placeholder {
    color: white;
    opacity: 0.5;
}


/* video call */
#videos {
    position: relative;
    display: flex;
    place-content: center;
    flex-wrap: wrap;
    align-items: center;
    height: calc(100vh - 180px);
    margin-left: 40px;
}

video {
    max-width: 100%;
    max-height: 100%;
    height:auto;
    width:auto;
    object-fit: contain;
    background-color: var(--light-color);
    border-radius: 5px;
    background-color: black;
}
/* ... */

